--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Wilcome to the best Website!</h1>
+    <h1>Welcome to the best Website!</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique totam
       id excepturi inventore voluptates officiis molestias odit? Alias tempore
@@ -16,5 +17,6 @@
       consectetur expedita provident, libero laborum, ex consequatur qui vel,
       maiores repellendus?
     </p>
+    <script src="main.js"></script>
   </body>
 </html>
