--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./public/styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -17,6 +17,7 @@
       consectetur expedita provident, libero laborum, ex consequatur qui vel,
       maiores repellendus?
     </p>
-    <script src="main.js"></script>
+    <img src="Bicho-preguiça_3.jpeg" alt="sloth" />
+    <script src="./public/main.js"></script>
   </body>
 </html>
