--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -18,6 +18,6 @@
       maiores repellendus?
     </p>
     <img src="Bicho-preguiça_3.jpeg" alt="sloth" />
-    <script src="./public/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
